# Lab_1_SingletonPattern

./: CMakeLists.txt  Person.h  PersonKeeper.h  README.md  StackTemplate.h  Untitled Diagram.drawio  main.cpp  test.cpp  Энгельке_Отчет_1.docx
data/: input.txt  output.txt
include/: Exception.h  PersonKeeper.h  StackTemplate.h
src/: main.cpp
test/: test.cpp
